cabal-version: 1.12

name:           advent-of-code
version:        0.1.0
description:    Personal solutions for Advent of Code 2020
homepage:       https://repo-url#readme
author:         Igor Beschastnov
maintainer:     beschastnovigor@gmail.com
build-type:     Simple
extra-source-files:
    README.md

--source-repository head
--  type: git
--  location: https://repo-url

executable advent-of-code-exe
  main-is: Main.hs
  other-modules:
      Paths_advent_of_code
    , Day1
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , split >=0.2.3.4
  default-language: Haskell2010
