cabal-version: 1.12

name:           advent-of-code
version:        0.1.0
description:    Personal solutions for Advent of Code 2020
author:         Igor Beschastnov

executable advent-of-code-exe
  main-is: Main.hs
  other-modules:
      Paths_advent_of_code
    , Advent
    , Day1
    , Day2
    , Day3
    , Day4
  hs-source-dirs:
      app
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base               >=4.7 && <5
    , split              >=0.2.3.4
    , terminal-size      >=0.3.2.1
  default-language: Haskell2010
